Snapping Option Face Nearest is not working correctly #102512

Closed
opened 2022-11-15 01:53:19 +01:00 by Silas Opel · 10 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.86

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-14 02:27, hash: 5fe146e505
Worked: 3.4

Short description of error
The snapping option Face nearest is not working as expected or as it does in previous versions.

Exact steps for others to reproduce the error
Open Blender and add a plane. Select the plane and go into edit mode. Activate the snapping option Face nearest and compare it to 3.4.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.86 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-14 02:27, hash: `5fe146e505` Worked: 3.4 **Short description of error** The snapping option Face nearest is not working as expected or as it does in previous versions. **Exact steps for others to reproduce the error** Open Blender and add a plane. Select the plane and go into edit mode. Activate the snapping option Face nearest and compare it to 3.4.
Author

Added subscriber: @DarkKnight

Added subscriber: @DarkKnight
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Looking into this, and testing by comparing 3.5 and 3.3, I don't see an immediate difference.
Could you be more specific about what is working differently?

Looking into this, and testing by comparing 3.5 and 3.3, I don't see an immediate difference. Could you be more specific about what is working differently?
Author

I have recorded a small video to show the difference.

Blender Snapping Problem.mp4

I have recorded a small video to show the difference. [Blender Snapping Problem.mp4](https://archive.blender.org/developer/F13916343/Blender_Snapping_Problem.mp4)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.

investigating...

I can confirm the problem. investigating...

This issue was referenced by be40c67b56

This issue was referenced by be40c67b56cca91f7e53268d3fb541ca4e665b25

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-11-15 16:07:48 +01:00
Author

Thank you for fixing it! It drove me nuts yesterday when i tried to retopo something.

Thank you for fixing it! It drove me nuts yesterday when i tried to retopo something.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102512
No description provided.