Fix T102512: Snapping Option Face Nearest is not working

Caused by misuse of the `GS` macro.

Error in rB8f4e52b7e0dd